--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Croxy Proxy Server Template - Christina</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="https://kit.fontawesome.com/881e48acdb.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="grid-container">
