--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Croxy Proxy Server Template - Christina</title>
+        <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
         <link rel="stylesheet" href="styles.css">
-        <script src="https://kit.fontawesome.com/881e48acdb.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     </head>
     <body>
         <div id="grid-container">
@@ -18,7 +20,5 @@
         <script src="http://localhost:3001/bundle.js"></script>
         <script src="http://localhost:3002/reviews.js"></script>
         <script src="http://localhost:3003/app.js"></script>
-        <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     </body>
 </html>
