Updated server and index html for ec2

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
             <div id="reviews"></div>
             <div id="related"></div>
         </div>
-        <script src="http://localhost:3004/bundle.js"></script>
-        <script src="http://localhost:3001/bundle.js"></script>
-        <script src="http://localhost:3002/reviews.js"></script>
-        <script src="http://localhost:3003/app.js"></script>
+        <script src="http://3.140.248.238:3004/bundle.js"></script>
+        <script src="http://3.23.86.72:3001/bundle.js"></script>
+        <script src="http://18.221.226.62:3002/reviews.js"></script>
+        <script src="http://3.140.252.86:3003/app.js"></script>
     </body>
 </html>
