Updated imgs to S3, adjusted CSS

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,16 @@
     </head>
     <body>
         <div id="grid-container">
+            <div class="headerContainer">
+                <img id="header" src="imgs/croxyheader.png"></img>
+            </div>
             <div id="image"></div>
             <div id="cart"></div>
             <div id="reviews"></div>
             <div id="related"></div>
+            <div class="footerContainer">
+                <img id='footer' src="imgs/Croxy-Footer.png"></img>
+            </div>
         </div>
         <script src="http://3.140.248.238:3004/bundle.js"></script>
         <script src="http://3.23.86.72:3001/bundle.js"></script>
