updated to pull of s3

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <body>
         <div id="grid-container">
             <div class="headerContainer">
-                <img id="header" src="imgs/croxyheader.png"></img>
+                <img id="header" src="https://croxyproxyimages.s3.us-east-2.amazonaws.com/croxyheader.png"></img>
             </div>
             <div id="image"></div>
             <div id="cart"></div>
             <div id="reviews"></div>
             <div id="related"></div>
             <div class="footerContainer">
-                <img id='footer' src="imgs/Croxy-Footer.png"></img>
+                <img id='footer' src="https://croxyproxyimages.s3.us-east-2.amazonaws.com/Croxy-Footer.png"></img>
             </div>
         </div>
         <script src="http://3.140.248.238:3004/bundle.js"></script>
